<resources>
    <string name="action_confirm">Confirm</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="app_name">Sunny Weather</string>
    <string name="defaultUserName">User</string>
    <string name="forecastTitle">未来7天天气</string>
    <string name="intentExtraLng">longitude</string>
    <string name="intentExtraLat">latitude</string>
    <string name="intentExtraPlaceName">placeName</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalidToken">Enter your token</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lifeIndexTitle">生活指数</string>
    <string name="name_token_edittext">令牌</string>
    <string name="name_name_edittext">称呼</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_input_place">输入想搜寻的位置...</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_token">输入你的令牌</string>
    <string name="prompt_name">应该如何称呼你？</string>
    <string name="responseStatusOK">ok</string>
    <string name="savedPlaceSp">saved_place</string>
    <string name="spSavedPlaceKey">saved_place</string>
    <string name="spTokenKey">token</string>
    <string name="spUserNameKey">name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="titleColdRisk">感冒</string>
    <string name="titleDressing">穿衣</string>
    <string name="titleUltraviolet">紫外线</string>
    <string name="titleCarWashing">洗车</string>
    <string name="userInfoSp">user_info</string>
    <string name="verticalSeparator">|</string>
    <string name="welcome">"Welcome !"</string>
</resources>